--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
+<script>
 const API_URL = "https://script.google.com/macros/s/AKfycbwGjsN6dtyocyZ1tiycixLe4ym3NZxyXzKeD1IAAAGTu4FL21-viyrWmuXbiQqArqpR/exec";
 const API_KEY = "fin2026_9fA3xK2Qm7R8vW5LZB0eC1D4YH6uR";
 
-fetch(API_URL, {
-  method: "POST",
-  headers: {"Content-Type":"application/json"},
-  body: JSON.stringify({
-    key: API_KEY,
-    action: "addTransaction",
-    date: "2026-01-02",
-    type: "expense",
-    category: "Еда",
-    subcategory: "продукты",
-    amount: 500,
-    note: "тест"
-  })
-}).then(r=>r.json()).then(console.log);
+(async () => {
+  try {
+    const res = await fetch(API_URL, {
+      method: "POST",
+      headers: {"Content-Type":"application/json"},
+      body: JSON.stringify({
+        key: API_KEY,
+        action: "addTransaction",
+        date: "2026-01-02",
+        type: "expense",
+        category: "Еда",
+        subcategory: "продукты",
+        amount: 500,
+        note: "тест"
+      })
+    });
+
+    console.log("HTTP status:", res.status);
+    const json = await res.json();
+    console.log("Response JSON:", json);
+  } catch (e) {
+    console.error("Fetch error:", e);
+  }
+})();
+</script>
