--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbwGjsN6dtyocyZ1tiycixLe4ym3NZxyXzKeD1IAAAGTu4FL21-viyrWmuXbiQqArqpR/exec";
+const API_URL = "https://rough-breeze-5ac6.chatgptnik.workers.dev/";
 const API_KEY = "fin2026_9fA3xK2Qm7R8vW5LZB0eC1D4YH6uR";
 
 (async () => {
