--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="ru">
 <head>
@@ -553,6 +554,28 @@
 </div>
 
 <script>
+  const API_BASE = "https://rough-breeze-5ac6.chatgptnik.workers.dev";
+
+async function apiFetch(action, { method = "GET", params = {}, body = null } = {}) {
+  const url = new URL(API_BASE);
+  url.searchParams.set("action", action);
+  Object.entries(params).forEach(([k, v]) => url.searchParams.set(k, v));
+
+  const res = await fetch(url.toString(), {
+    method,
+    headers: { "Content-Type": "application/json" },
+    body: body ? JSON.stringify(body) : null,
+  });
+
+  const text = await res.text();
+  let json;
+  try { json = JSON.parse(text); } catch { throw new Error(`API not JSON: ${text.slice(0,200)}`); }
+
+  if (!res.ok || json.ok === false) {
+    throw new Error(json?.error || `HTTP ${res.status}`);
+  }
+  return json.data;
+}
 /* =======================
    CONFIG
    ======================= */
