--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
      ***********************/
     // ВАЖНО: замени на URL твоего Cloudflare Worker, например:
     // const API_URL = "https://finance-2026-proxy.<account>.workers.dev";
-    const API_URL = "https://YOUR_WORKER_URL_HERE";
+    const API_URL = "https://rough-breeze-5ac6.chatgptnik.workers.dev/";
     const API_KEY = ""; // можно оставить пустым, если key вставляется на воркере через env.API_KEY
 
     /***********************
