--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     body{
       margin:0; background:var(--bg); color:var(--text);
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      padding-bottom: calc(var(--navH) + var(--safeB) + 12px);
+       padding-bottom: calc(var(--navH) + var(--safeB) + 34px);
       -webkit-tap-highlight-color: transparent;
     }
     a{color:inherit}
@@ -30,6 +30,13 @@
       display:grid; gap:12px;
       grid-template-columns: 1fr;
     }
+    .wrap{
+  padding-bottom: calc(var(--navH) + var(--safeB) + 24px);
+}
+    @media (max-width: 560px){
+  .grid{ gap:14px; }
+  .card{ padding: 14px; }
+}
     @media (min-width: 980px){
       .grid.cols2{grid-template-columns: 1.1fr .9fr;}
       .grid.cols3{grid-template-columns: 1fr 1fr 1fr;}
@@ -202,9 +209,9 @@
     .toast{
       position: fixed;
       left: 12px; right: 12px;
-      bottom: calc(var(--navH) + 20px + var(--safeB));
+      bottom: calc(var(--navH) + 34px + var(--safeB));
       max-width: 1100px;
-      margin: 0 auto;
+      margin: 4000 auto;
       background: rgba(23,26,34,.92);
       border: 1px solid rgba(255,255,255,.10);
       border-radius: 16px;
@@ -2044,6 +2051,11 @@ function escAttr(s){ return esc(s).replaceAll("\n"," "); }
     syncAll("init");
   }
 })();
+  /* === Mobile layout fix: no 2-column rows on narrow screens === */
+@media (max-width: 560px){
+  .row{ gap:12px; }
+  .row > *{ flex: 1 1 100%; min-width: 0; }
+}
 </script>
 </body>
 </html>
