--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
  * ОЖИДАЕМЫЕ ACTIONS (POST JSON):
  * { key, action:"addOperation"|"deleteOperation"|... , data:{...} }
  */
-const API_URL = "PASTE_YOUR_GAS_WEBAPP_URL_HERE";   // например: https://script.google.com/macros/s/XXXX/exec
+const API_URL = "https://rough-breeze-5ac6.chatgptnik.workers.dev/";   // например: https://script.google.com/macros/s/XXXX/exec
 const API_KEY = ""; // если используешь ключ в GAS — вставь сюда
 
 /**
